--- a/js/public/template/home.html
+++ b/js/public/template/home.html
@@ -14,7 +14,7 @@
 <div class="">
   <div class="text-center">
     <div class="">
-      <img src="../../../images/etumade_logo.png" alt="Etu'Made">
+      <img src="../images/etumade_logo.png" alt="Etu'Made">
     </div>
     <div id="button-home">
       <div class="button-div"><button id="project-btn-add" type="button" name="add-project">AJOUTER UN PROJET</button></div>
