new style and login

--- a/js/public/template/home.html
+++ b/js/public/template/home.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="css/home.css">
-
+<link rel="stylesheet" href="css/list.animation.css">
+<link rel="stylesheet" href="css/jumbotron.animation.css">
 
 <div id="right-spans" class="pull-right visible-lg visible-md">
   <p><span>CREATION</span></p>
@@ -11,7 +12,7 @@
   <p><span>BORDEAUX</span></p>
 </div>
 
-<div class="">
+<div class="spotlith">
   <div class="text-center">
     <div class="">
       <img src="images/etumade_logo.png" alt="Etu'Made">
