--- a/css/common.css
+++ b/css/common.css
@@ -8,7 +8,8 @@
 }
 
 #logo-navbar{
-
+	/*background-image: url("images/etumade_logo.png");
+	background-size: 50px;*/
 }
 
 .navbar-brand {
@@ -32,4 +33,23 @@
 
 #nav-list li a:hover{
 	color: #143c8c;
+	background-color: #c2bebe;
+}
+
+#login li{
+	padding: 5px;
+}
+
+#login button{
+	background-color: #DDDDDD;
+  border-color: #DDDDDD;
+  border-radius: 5px;
+	font-size: 1.7rem;
+  color: #606060;
+	padding-left: 30px;
+	padding-right: 30px;
+}
+
+#login button:hover{
+	box-shadow: 2px 2px 2px 2px #c2bebe;
 }
